--- a/style.css
+++ b/style.css
@@ -142,9 +142,10 @@ button:hover {
 }
 
 footer {
+    margin-top: 100px;
     display: block;
     position: absolute;
-    bottom: 50px;
+    bottom: 1vh;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 10px;
@@ -161,4 +162,10 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+@media (max-height: 600px) {
+    body {
+        align-items: normal;
+    }
 }
